--- a/src/components/Pages/MobileMainPage/AboutUsSlide/AboutUsSlide.module.scss
+++ b/src/components/Pages/MobileMainPage/AboutUsSlide/AboutUsSlide.module.scss
@@ -1,10 +1,23 @@
 @use 'breakpoints' as *;
 
-.callToActionSlideWrapper{
+.aboutUsSlideWrapper{
   display: flex;
-  flex-direction: column;
-  align-items: center;
+  flex-direction: row;
+  gap: 8px;
   width: 100%;
-  height: 852px;
+  padding: 16px 0;
 
+  .leftSide{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding-left: 16px;
+    gap: 8px;
+  }
+
+  .rightSide{
+    display: flex;
+    flex-direction: column;
+    height: 705px;
+  }
 }
