--- a/src/components/Pages/MobileMainPage/OurOffersSlide/OurOffersSlide.module.scss
+++ b/src/components/Pages/MobileMainPage/OurOffersSlide/OurOffersSlide.module.scss
@@ -1,10 +1,40 @@
-@use 'breakpoints' as *;
-
-.callToActionSlideWrapper{
+.ourOffersWrapper {
   display: flex;
   flex-direction: column;
   align-items: center;
   width: 100%;
-  height: 852px;
+  padding: 44px 16px 0;
+  box-sizing: border-box;
+  gap: 24px;
 
+  .titleLine {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+
+    .titleText {
+      font-family: var(--tactic-sans-bold), sans-serif;
+      font-weight: bold;
+      font-size: 32px;
+      color: #FFFFF0;
+      text-align: center;
+      margin: 0;
+    }
+  }
+
+  .carouselWrapper {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+  }
+
+  .elseOffers {
+    display: flex;
+    flex-direction: column;
+    gap: 16px;
+    width: 361px;
+  }
 }
