--- a/src/components/Pages/MobileMainPage/CallToActionSlide/CallToActionSlide.module.scss
+++ b/src/components/Pages/MobileMainPage/CallToActionSlide/CallToActionSlide.module.scss
@@ -1,10 +1,82 @@
 @use 'breakpoints' as *;
 
-.callToActionSlideWrapper{
+.callToActionSlideWrapper {
   display: flex;
   flex-direction: column;
   align-items: center;
   width: 100%;
-  height: 852px;
+  padding: 16px;
+  box-sizing: border-box;
+  margin-top: 284px;
+  margin-bottom: 284px;
 
+  .callToActionBlock {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: flex-start;
+    width: 361px;
+    height: 230px;
+    border-radius: 40px;
+    padding: 12px 8px 12px 8px;
+    box-sizing: border-box;
+    background: url('../../../../../assets/png/call_to_action_bg_mobile.png') center / cover no-repeat;
+    box-shadow: 0px 4px 18px rgba(69, 123, 157, 0.25);
+
+    .mainText {
+      width: 345px;
+      height: 69px;
+      color: #fffff0;
+      font-family: var(--montserrat), sans-serif;
+      font-weight: 400;
+      font-size: 10px;
+      display: flex;
+      align-items: center;
+    }
+
+    .titleText {
+      width: 345px;
+      height: 34px;
+      color: #fffff0;
+      font-family: var(--tactic-sans-medium), sans-serif;
+      font-weight: 400;
+      font-size: 10px;
+      display: flex;
+      align-items: center;
+    }
+
+    .subtitleText {
+      width: 345px;
+      height: 34px;
+      color: #fffff0;
+      font-family: var(--tactic-sans-medium), sans-serif;
+      font-weight: 400;
+      font-size: 10px;
+      display: flex;
+      align-items: center;
+    }
+
+    .buttonWrapper {
+      width: 345px;
+      height: 59px;
+      display: flex;
+      align-items: center;
+      margin-top: auto;
+
+      .button {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        width: 173px;
+        height: 35px;
+        background-color: #D91722;
+        border-radius: 50px;
+        color: #fffff0;
+        font-family: var(--tactic-sans-medium), sans-serif;
+        font-weight: 500;
+        font-size: 8px;
+        cursor: pointer;
+      }
+    }
+  }
 }
