--- a/src/components/Pages/MobileMainPage/OurOffersSlide/ElseOffersItem/ElseOffersItem.module.scss
+++ b/src/components/Pages/MobileMainPage/OurOffersSlide/ElseOffersItem/ElseOffersItem.module.scss
@@ -7,12 +7,13 @@
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-    align-items: center;
+    align-items: flex-end;
     width: 361px;
-    height: 80px;
+    height: 52px;
     border-bottom: 2px solid #A8DADC;
     box-sizing: border-box;
     cursor: pointer;
+    padding-bottom: 8px;
 
     &:active {
       opacity: 0.8;
@@ -21,22 +22,20 @@
     .textBlock {
       display: flex;
       flex-direction: column;
-      justify-content: space-between;
-      height: 100%;
-      padding: 8px 0;
+      justify-content: flex-end;
+      gap: 4px;
 
       .subtitle {
         font-family: var(--montserrat), sans-serif;
         font-weight: normal;
-        font-size: 14px;
+        font-size: 8px;
         color: #FFFFF0;
-        line-height: 1;
       }
 
       .title {
         font-family: var(--tactic-sans-medium), sans-serif;
         font-weight: 500;
-        font-size: 24px;
+        font-size: 18px;
         color: #A8DADC;
         margin: 0;
       }
@@ -46,8 +45,8 @@
       display: flex;
       align-items: center;
       justify-content: center;
-      width: 48px;
-      height: 48px;
+      width: 32px;
+      height: 32px;
 
       .arrowIcon {
         width: 32px;
