--- a/src/components/Pages/MobileMainPage/OurOffersSlide/OurOffersSlide.module.scss
+++ b/src/components/Pages/MobileMainPage/OurOffersSlide/OurOffersSlide.module.scss
@@ -3,7 +3,8 @@
   flex-direction: column;
   align-items: center;
   width: 100%;
-  padding: 44px 16px 0;
+  padding: 0 16px 0;
+  margin-top: 284px;
   box-sizing: border-box;
   gap: 24px;
 
@@ -16,7 +17,7 @@
     .titleText {
       font-family: var(--tactic-sans-bold), sans-serif;
       font-weight: bold;
-      font-size: 32px;
+      font-size: 24px;
       color: #FFFFF0;
       text-align: center;
       margin: 0;
