--- a/src/components/Pages/MobileMainPage/TeamRepresentatives/TeamRepresentatives.module.scss
+++ b/src/components/Pages/MobileMainPage/TeamRepresentatives/TeamRepresentatives.module.scss
@@ -3,8 +3,9 @@
   flex-direction: column;
   align-items: center;
   width: 100%;
-  padding: 44px 16px 0;
+  padding: 0 16px 0;
   box-sizing: border-box;
+  margin-top: 284px;
 
   .title {
     width: 361px;
