--- a/src/components/Pages/MobileMainPage/YouWillFindSlide/YouWillFindSlide.module.scss
+++ b/src/components/Pages/MobileMainPage/YouWillFindSlide/YouWillFindSlide.module.scss
@@ -3,8 +3,9 @@
   flex-direction: column;
   align-items: center;
   width: 100%;
-  padding: 44px 16px 0;
+  padding: 0 16px 0;
   box-sizing: border-box;
+  margin-top: 284px;
 
   .mainTitle {
     width: 361px;
@@ -13,7 +14,6 @@
     font-size: 24px;
     color: #FFFFF0;
     margin: 0 0 68px 0;
-    line-height: 1;
     text-align: left;
   }
 
