--- a/src/components/Pages/MobileMainPage/FirstSlide/FirstSlide.module.scss
+++ b/src/components/Pages/MobileMainPage/FirstSlide/FirstSlide.module.scss
@@ -1,7 +1,10 @@
 .firstSlideWrapper {
   position: relative;
   width: 100%;
-  height: 100dvh;
+  height: 100vh;
+  height: -webkit-fill-available;
+  min-height: 100vh;
+  min-height: -webkit-fill-available;
   overflow: hidden;
 
   .backgroundWrapper {
