--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -14,8 +14,14 @@ html,
 body {
   max-width: 100vw;
   overflow-x: hidden;
-  overscroll-behavior: none;
-  -webkit-overflow-scrolling: touch;
+}
+
+@media (hover: none) and (pointer: coarse) {
+  html,
+  body {
+    overscroll-behavior: none;
+    -webkit-overflow-scrolling: touch;
+  }
 }
 
 body {
